# HaloLLM

./: Cargo.toml  README.md  testhalo.sh
src/: main.rs
