[package]
name = "halollm"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7"
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
tokenizers = "0.15"

# Update to the latest Candle versions
candle-core = "0.9.2"
candle-nn = "0.9.2"
candle-transformers = "0.9.2"